cmake_minimum_required(VERSION 3.4)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
project(MunitionStore)
option(BUILD_TESTS "Build tests" OFF)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/base)
add_executable(it1 ${CMAKE_CURRENT_SOURCE_DIR}/base/munition.cpp)
add_executable(it2 ${CMAKE_CURRENT_SOURCE_DIR}/base/munition2.cpp)
install(TARGETS it1 RUNTIME DESTINATION bin)
install(TARGETS it2 RUNTIME DESTINATION bin)
if (BUILD_TESTS)
  enable_testing()
  add_subdirectory(third-party/gtest)
  include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
  include_directories(${gmock_SOURCE_DIR}/include ${gmock_SOURCE_DIR})
  add_executable(pr ${CMAKE_CURRENT_SOURCE_DIR}/tests/test_main.cpp)
  add_executable(pr2 ${CMAKE_CURRENT_SOURCE_DIR}/tests/test_munition_2.cpp)
  add_executable(pr3 ${CMAKE_CURRENT_SOURCE_DIR}/tests/test3.cpp)
  target_link_libraries(pr gmock gtest gtest_main)
  target_link_libraries(pr2 gmock gtest gtest_main)
  target_link_libraries(pr3 gmock gtest gtest_main)
  add_test(NAME pr COMMAND pr)
  add_test(NAME pr2 COMMAND pr2)
  add_test(NAME pr3 COMMAND pr3)
endif()
